# peerlinker

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  peerlinker.sln  vcpkg.json
include/: BenToken.h  BenType.h  BencodeUtils.h  ListEntry.h  TokenFormatter.h
libpeerlinker/: BencodeHelper.cs  PrettyPrint.cs  libpeerlinker.csproj
libpeerlinker/Core/: Block.cs  FileEntry.cs  TorrentMetadata.cs  TorrentParsingException.cs
libpeerlinker/DiskHandling/: DiskWriter.cs
libpeerlinker/Download/: Tracker.cs  TrackerException.cs
libpeerlinker/Exchange/: PieceFetcher.cs  PieceFullfilmentResult.cs  QueryResult.cs
libpeerlinker/FileHandling/: TorrentFile.cs  TorrentMetadata.cs  TorrentMetadataException.cs
libpeerlinker/Messages/: AnnounceResponse.cs  Handshake.cs  PeerMessage.cs  PeerWireProtocol.cs
libpeerlinker/Networking/: DiscoveryResult.cs  MessageDispatcher.cs  MessageReceiver.cs  PeerConn.cs  PeerFinder.cs  PeerIpv4.cs
libpeerlinker/Packets/: HandshakeMessage.cs
libpeerlinker/Peers/: DiscoveryResult.cs  PeerConn.cs  PeerConnException.cs  PeerConnection.cs  PeerData.cs  PeerFinder.cs  PeerIpv4.cs  PeerManager.cs
libpeerlinker/Tracker/: TrackerHandle.cs
libpeerlinker/Tracking/: Tracker.cs  TrackerException.cs  TrackerHandle.cs
libpeerlinker/Utility/: BencodeUtility.cs  BitField.cs  Logger.cs  PrettyPrint.cs
peerlinker/: Program.cs  peerlinker.csproj
src/tester/: CMakeLists.txt  README.md  main.cpp
testfiles/: archlinux.torrent  fedora.torrent  win2000.torrent
